--- a/.github/ISSUE_TEMPLATE/🐞버그-및-이슈-제보🐞.md
+++ b/.github/ISSUE_TEMPLATE/🐞버그-및-이슈-제보🐞.md
@@ -2,7 +2,7 @@
 name: "\U0001F41E버그 및 이슈 제보\U0001F41E"
 about: 버그 및 이슈 제보 템플릿
 title: "예시) \U0001F41E버그 - [25.01.01] 게시판 조회 버그"
-labels: bug
+labels: ''
 assignees: ''
 
 ---
